Some refinements for mobile api and some bug fixes Working on making serialization faster